--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<div id="container">
 			<div id="basic-info">
 				<div class="info">
-					<h1>bob Higgins</h1> 
+					<h1>Jason Higgins</h1> 
 					<p>651-325-8529</p>
 					<p>1517 Saint Paul Avenue, 55116, Saint Paul, MN</p>
 				</div>
